1.增加按钮处理器和相关线程 2.增加常用枚举文件和常量定义文件globals.h 3.增加git过滤规则

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /client/Debug
+/client/GeneratedFiles
+/ltp/.vs/ltp/v16
+/ltp/ipch/ltpclient-4f12d635
+/ltp/Win32/Debug
