--- a/client/ltpclient.vcxproj.filters
+++ b/client/ltpclient.vcxproj.filters
@@ -248,6 +248,15 @@
     <ClCompile Include="GeneratedFiles\Release\moc_network.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="..\base\clickdelaycheckbutton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_clickdelaycheckbutton.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_clickdelaycheckbutton.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ltpclient.h">
@@ -368,6 +377,9 @@
       <Filter>Header Files</Filter>
     </CustomBuild>
     <CustomBuild Include="network.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\base\clickdelaycheckbutton.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
